# vulkan2json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vulkan2json.pc.in
check/: get_vulkan_version.cpp
generator/: generate.py  generate_tests.py
generator/vulkan_header_parser/: footer.py  get_class_name.py  get_end_of_typename.py  get_enum.py  get_enum_class_name.py  get_handle_class_name.py  get_header_version.py  get_struct.py  get_struct_class_name.py  header.py  to_extension_name_def.py  vulkan_class_name.py
include/: CMakeLists.txt
include/vulkan2json/: AabbPositionsKHR.hpp  AabbPositionsNV.hpp  AccelerationStructureBuildGeometryInfoKHR.hpp  AccelerationStructureBuildRangeInfoKHR.hpp  AccelerationStructureBuildSizesInfoKHR.hpp  AccelerationStructureBuildTypeKHR.hpp  AccelerationStructureCompatibilityKHR.hpp  AccelerationStructureCreateFlagsKHR.hpp  AccelerationStructureCreateInfoKHR.hpp  AccelerationStructureCreateInfoNV.hpp  AccelerationStructureDeviceAddressInfoKHR.hpp  AccelerationStructureGeometryAabbsDataKHR.hpp  AccelerationStructureGeometryInstancesDataKHR.hpp  AccelerationStructureGeometryKHR.hpp  AccelerationStructureGeometryMotionTrianglesDataNV.hpp  AccelerationStructureGeometryTrianglesDataKHR.hpp  AccelerationStructureInfoNV.hpp  AccelerationStructureInstanceKHR.hpp  AccelerationStructureInstanceNV.hpp  AccelerationStructureMatrixMotionInstanceNV.hpp  AccelerationStructureMemoryRequirementsInfoNV.hpp  AccelerationStructureMemoryRequirementsTypeNV.hpp  AccelerationStructureMotionInfoFlagsNV.hpp  AccelerationStructureMotionInfoNV.hpp  AccelerationStructureMotionInstanceFlagsNV.hpp  AccelerationStructureMotionInstanceNV.hpp  AccelerationStructureMotionInstanceTypeNV.hpp  AccelerationStructureSRTMotionInstanceNV.hpp  AccelerationStructureTypeKHR.hpp  AccelerationStructureTypeNV.hpp  AccelerationStructureVersionInfoKHR.hpp  AccessFlags.hpp  AccessFlags2KHR.hpp  AcquireNextImageInfoKHR.hpp  AcquireProfilingLockFlagsKHR.hpp  AcquireProfilingLockInfoKHR.hpp  AllocationCallbacks.hpp  AndroidHardwareBufferFormatPropertiesANDROID.hpp  AndroidHardwareBufferPropertiesANDROID.hpp  AndroidHardwareBufferUsageANDROID.hpp  (+1095 more)
src/: CMakeLists.txt  vulkan2json.cpp
test/: CMakeLists.txt  image_create_info.cpp  vulkan2json_tests.cpp
